Fix spinner on mobile web Load More button

--- a/app/assets/stylesheets/mixins/_button.scss
+++ b/app/assets/stylesheets/mixins/_button.scss
@@ -67,13 +67,13 @@
 
   &.button_selected,
   &:hover {
-    background: lighten($base, 10.25%);
+    background-color: lighten($base, 10.25%);
   }
 
   &.button_active,
   &.button_enabled:active,
   &:active {
-    background: darken($base, 5.5%);
+    background-color: darken($base, 5.5%);
   }
 
   &.button_enabled {
@@ -89,7 +89,7 @@
     &:hover {
       $_disabled-color: #aaaaaa;
 
-      background: $_disabled-color;
+      background-color: $_disabled-color;
       border: 1px solid $_disabled-color;
       color: darken($_disabled-color, 13.5%);
     }
@@ -207,8 +207,13 @@ a.button_primer,
 
   // mad hacky.
   &.button_gray {
-    background-color: #e7e7e7;
-    background-image: $icon-signup-spinner;
+    &,
+    &:hover {
+      background-color: #e7e7e7;
+      background-image: $icon-signup-spinner;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
   }
 
   &.button_green {
